[gd_scene load_steps=5 format=2]

[ext_resource path="res://Zombie.gd" type="Script" id=1]
[ext_resource path="res://Enemies/zombieLeft.png" type="Texture" id=2]
[ext_resource path="res://Sprite.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.0
height = 20.0

[node name="Zombie" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 30
hp = 2

[node name="ZombiePics" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
hframes = 3
script = ExtResource( 3 )
_sections_unfolded = [ "Animation" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="." index="2"]

position = Vector2( -8, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 24 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="DeadZombie" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 0, 12 )
rotation = 1.5708
texture = ExtResource( 2 )
hframes = 3
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


